--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Stop Watch</title>
 </head>
 
@@ -24,7 +24,7 @@
         <button id="restartBtn">Reset</button>
     </div>
 </body>
-<script src="/js/StopWatch.js"></script>
-<script src="/js/TimeDate.js"></script>
+<script src="js/StopWatch.js"></script>
+<script src="js/TimeDate.js"></script>
 
 </html>
